test/good/generics/default02.px

func f<T>(T x, [T] a: []) [T] def
    return a.length == 0 ? [x] : a

print f(5), f("A", []), f(false, [true])
