test/bad/generics/type05.px

func f<T>(x: T) def
    x = 3

f("")
